@@ -1,8 +1,8 @@
 module TwoWaySQL
   module VERSION #:nodoc:
     MAJOR = 0
-    MINOR = 2
-    TINY  = 1
+    MINOR = 3
+    TINY  = 0
 
     STRING = [MAJOR, MINOR, TINY].join('.')
   end
